# tank_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml  plan_visualization.ipynb  requirenments.txt  stats.csv  tank_robot_environment.yml
config/: diffdrive.yaml  gun.yaml  joint_state_controller.yaml  turret.yaml
launch/: amcl.launch  gazebo.launch  move_base.launch  rviz.launch  show_model.launch
maps/: by_small.pgm  by_small.yaml
meshes/: front_wheel.dae  gun.dae  middle_wheel.dae  rear_left_wheel.dae  rear_right_wheel.dae  turret.dae
meshes/cat_3/: model.dae
meshes/cat_4/: model.dae
msg/: ShootCommand.msg
params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  planner.yaml
rviz/: navigation.rviz
scripts/: GoalsSpawner.py  GridBasedPlanner.py  Mapper.py  PathSpawner.py  PlanExecutor.py  gun_ori_ground_truth.py  main_tank_routine.py  odom_ground_truth.py  send_goal.py  send_tank_commands.py  shooting.py  tank_controller.py  teleop_tank_keyboard.py  world_name_publisher.py
urdf/: camera.xacro  imu_plugin.xacro  lidar.xacro  projectile.urdf  tank.urdf.xacro  traj_dot.sdf
worlds/: by_small.sdf  by_small.sdf.xacro  by_small2.sdf  by_small_1.sdf  by_small_2.sdf  by_small_3.sdf  goals.sdf.xacro  goals_params.txt  obstacles.sdf.xacro
worlds/goals_tmp/: cat_goal_1_0.sdf  cat_goal_1_1.sdf  cat_goal_1_2.sdf  cat_goal_1_3.sdf  cat_goal_1_4.sdf  cat_goal_2_0.sdf  cat_goal_2_1.sdf  cat_goal_2_2.sdf  cat_goal_3_0.sdf  cat_goal_3_1.sdf  cat_goal_3_2.sdf  cat_goal_4_0.sdf  cat_goal_4_1.sdf  cat_goal_4_2.sdf
worlds/goals_tmp_for_map/: cat_goal_1_0.sdf  cat_goal_1_1.sdf  cat_goal_1_2.sdf  cat_goal_1_3.sdf  cat_goal_1_4.sdf  cat_goal_2_0.sdf  cat_goal_2_1.sdf  cat_goal_2_2.sdf  cat_goal_3_0.sdf  cat_goal_3_1.sdf  cat_goal_3_2.sdf  cat_goal_4_0.sdf  cat_goal_4_1.sdf  cat_goal_4_2.sdf
worlds/perimeters/: small_perimeter.sdf
